--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
