--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,11 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
     implementation 'androidx.fragment:fragment-ktx:1.6.2'
-    implementation "io.insert-koin:koin-android:3.3.2"
+    implementation 'io.insert-koin:koin-android:3.3.2'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
     implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation 'androidx.core:core-ktx:1.10.1'
